<resources>
    <string name="app_name">Large File Splitter</string>
    <string name="btn_split">SPLIT</string>
    <string name="btn_join">JOIN</string>
    <string name="hint_text_input_split">path to file to split</string>
    <string name="hint_text_input_join">path to folder containing partfiles</string>
    <string name="btn_browse">BROWSE</string>

    <string name="permission_title">Permission Required</string>
    <string name="permission_body">
        The app needs read and write permission to be able to split and join the files
    </string>

    <string name="split_progress">Splitting, Please Wait</string>
    <string name="split_invalid_path">File path is invalid</string>
    <string name="split_empty_path">Please choose a file to split</string>
    <string name="split_fin">Splitting Complete</string>
    <string name="split_cancel">Splitting Cancelled</string>
    <string name="split_savepath">LFS partfiles are saved in %1$s*</string>
    <string name="split_unknown_path">Please choose file from internal/external storage</string>
    <string name="split_choose_file">Choose file to split</string>

    <string name="join_unknown_path">Please choose folder from internal/external storage</string>
    <string name="join_invalid_path">Directory does not exist</string>
    <string name="join_empty_path">Please choose a folder where partfiles are present</string>
    <string name="join_found">%1$s%n%2$d LFS Partfiles found in directory</string>
    <string name="join_progress">Joining, Please Wait</string>
    <string name="join_fin">Joining Complete</string>
    <string name="join_savepath">File saved in %1$s</string>
    <string name="join_cancel">Joining Cancelled</string>
    <string name="join_delete_partfiles_noconfirm">Don\'t Ask Again</string>
    <string name="join_delete_partfiles">Joining partfiles is successful.
        These partfiles are no longer required and can be safely deleted.
        The partfiles will cause problems if they persist and
        also take up additional storage space in your device.\n\n
        Do you want to delete them?\n
        \nDeleting will free up ___gb of storage\n
    </string>

    <string name="pref_delete_partfiles">deletepartfiles</string>

</resources>
