<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/layout_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">


	<TextView
		android:id="@+id/tv_output_split"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="64dp"
		android:maxHeight="100sp"
		android:padding="10dp"
		android:text="@string/split_choose_file"
		android:textAlignment="center"
		android:textSize="20sp"

		app:layout_constraintBottom_toTopOf="@id/pb"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0" />

	<EditText
		android:id="@+id/txt_path"
		android:layout_width="match_parent"
		android:layout_height="50sp"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="120dp"
		android:hint="@string/hint_text_input_split"
		android:importantForAutofill="no"
		android:inputType="text"
		android:textAlignment="center"
		android:textColorHighlight="@color/lightPrimary"

		android:textSize="15sp"
		app:layout_constraintBottom_toTopOf="@+id/btn_split"
		app:layout_constraintEnd_toStartOf="@+id/btn_browse_split"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_output_split" />

	<Button
		android:id="@+id/btn_browse_split"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:text="@string/btn_browse"
		android:textSize="12sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@+id/txt_path" />

	<Button
		android:id="@+id/btn_split"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:backgroundTint="@color/color"
		android:text="@string/btn_split"

		app:layout_constraintBottom_toTopOf="@+id/pb"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_output_split" />


	<ProgressBar
		android:id="@+id/pb"
		style="@style/Widget.AppCompat.ProgressBar.Horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="32dp"

		android:visibility="invisible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />


	<TextView
		android:id="@+id/tv_output_join"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:maxHeight="100sp"
		android:padding="10dp"
		android:textAlignment="center"
		android:textSize="20sp"

		app:layout_constraintBottom_toTopOf="@+id/btn_join"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/pb" />

	<EditText
		android:id="@+id/txt_dir"
		android:layout_width="match_parent"
		android:layout_height="50sp"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="120dp"
		android:hint="@string/hint_text_input_join"
		android:importantForAutofill="no"
		android:inputType="text"
		android:textAlignment="center"
		android:textColorHighlight="@color/lightPrimary"
		android:textSize="15sp"

		app:layout_constraintBottom_toTopOf="@+id/btn_join"
		app:layout_constraintEnd_toStartOf="@+id/btn_browse_join"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_output_join" />

	<Button
		android:id="@+id/btn_browse_join"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:text="@string/btn_browse"
		android:textSize="12sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@+id/txt_dir" />

	<Button
		android:id="@+id/btn_join"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="64dp"
		android:backgroundTint="@color/colorAccent"

		android:text="@string/btn_join"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"

		/>


</androidx.constraintlayout.widget.ConstraintLayout>
